--- a/webUI/message-add.html
+++ b/webUI/message-add.html
@@ -142,9 +142,9 @@
                 dataType: "json",
                 type: "post",
                 contentType: "application/json",
-                headers:{"token":localStorage.getItem("token")},
+                headers: {"token": localStorage.getItem("token")},
                 success: function (cb) {
-                    if (cb && cb.code == "0000") {
+                    if (cb && cb.code === "0000") {
                         layer_close();
                         var index = layer.open({
                             type: 2,
@@ -152,6 +152,8 @@
                             content: "message-list.html"
                         });
                         layer.full(index);
+                    } else {
+                        layer.alert(cb.msg);
                     }
                 }
             });
@@ -180,11 +182,11 @@
         });
         uploader.on('fileQueued', function (file) {
             var $li = $(
-                '<div id="' + file.id + '" class="item">' +
-                '<div class="pic-box"><img></div>' +
-                '<div class="info">' + file.name + '</div>' +
-                '<p class="state">等待上传...</p>' +
-                '</div>'
+                    '<div id="' + file.id + '" class="item">' +
+                    '<div class="pic-box"><img></div>' +
+                    '<div class="info">' + file.name + '</div>' +
+                    '<p class="state">等待上传...</p>' +
+                    '</div>'
                 ),
                 $img = $li.find('img');
             $list.append($li);
@@ -469,10 +471,10 @@
             // 当有文件添加进来时执行，负责view的创建
             function addFile(file) {
                 var $li = $('<li id="' + file.id + '">' +
-                    '<p class="title">' + file.name + '</p>' +
-                    '<p class="imgWrap"></p>' +
-                    '<p class="progress"><span></span></p>' +
-                    '</li>'),
+                        '<p class="title">' + file.name + '</p>' +
+                        '<p class="imgWrap"></p>' +
+                        '<p class="progress"><span></span></p>' +
+                        '</li>'),
 
                     $btns = $('<div class="file-panel">' +
                         '<span class="cancel">删除</span>' +
