--- a/webUI/message-list.html
+++ b/webUI/message-list.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css"/>
     <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin"/>
     <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css"/>
     <!--[if IE 6]>
     <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js"></script>
     <script>DD_belatedPNG.fix('*');</script>
@@ -28,36 +29,48 @@
                                               href="javascript:location.replace(location.href);" title="刷新"><i
         class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
-    <div class="text-c">
+    <!--<div class="text-c">
 
         APP:
         <select class="select-box input-text" id="appSelect" style="width:120px;"/>
         <input type="text" name="" id="" placeholder=" 消息标题" style="width:250px" class="input-text">
         <button name="" id="searchMsg" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜消息
         </button>
-    </div>
+    </div>-->
     <div class="cl pd-5 bg-1 bk-gray mt-20"><span class="l"><a href="javascript:;" onclick="datadel()"
                                                                class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a
             class="btn btn-primary radius" onclick="picture_add('添加消息','message-add.html')" href="javascript:;"><i
-            class="Hui-iconfont">&#xe600;</i> 发布消息</a></span> <span class="r">共有数据：<strong>54</strong> 条</span></div>
+            class="Hui-iconfont">&#xe600;</i> 发布消息</a></span></div>
     <div class="mt-20">
-        <table class="table table-border table-bordered table-bg table-hover table-sort">
+        <table id="dataGrid" class="display table  table-bg table-hover table-sort" style="width:100%">
+            <thead>
+            <tr>
+                <th width="80">APP名称</th>
+                <th width="100">消息标题</th>
+                <th width="100">消息名称</th>
+                <th width="60">发布状态</th>
+                <th width="60">设备总数</th>
+                <th width="60">已送达数</th>
+                <th width="60">未送达数</th>
+                <th width="150">发布时间</th>
+            </tr>
+            </thead>
+        </table>
+        <!--<table class="table table-border table-bordered table-bg table-hover table-sort">
             <thead>
             <tr class="text-c">
                 <th width="40"><input name="" type="checkbox" value=""></th>
                 <th width="80">ID</th>
-                <th width="100">分类</th>
                 <th width="100">平台</th>
                 <th width="100">消息标题</th>
                 <th width="100">消息名称</th>
-                <th width="150">发布时间</th>
                 <th width="60">发布状态</th>
-                <th width="100">操作</th>
+                <th width="150">发布时间</th>
             </tr>
             </thead>
             <tbody id="dataGrid">
             </tbody>
-        </table>
+        </table>-->
     </div>
 </div>
 
@@ -70,44 +83,106 @@
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"></script>
 <script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 <script>
     var firstApp;
     var site = "http://127.0.0.1/pushAdmin";
     var loadGrid = function (app) {
-        $("#dataGrid").empty();
-        $.ajax({
-            url: site + "/push/admin/list",
-            data: JSON.stringify({"appName": app}),
-            dataType: "json",
-            type: "post",
-            contentType: "application/json",
-            headers:{"token":localStorage.getItem("token")},
-            success: function (cb) {
-                if (cb && cb.code == "0000") {
-                    var msgs = cb.data;
-                    $.each(msgs, function (idx, msg) {
-                        $("#dataGrid").append("<tr class=\"text-c\">" +
-                            "<td><input name=\"\" type=\"checkbox\" value=\"\"></td>\n" +
-                            "                <td>" + msg.id + "</td>\n" +
-                            "                <td>生活</td>\n" +
-                            "                <td class=\"text-c\">" + msg.platform + "</td>\n" +
-                            "                <td class=\"text-c\">" + msg.messageTitle + "</td>\n" +
-                            "                <td class=\"text-c\">" + msg.messageContent + "</a></td>\n" +
-                            "                <td>" + msg.createTime + "</td>\n" +
-                            "                <td class=\"td-status\"><span class=\"label label-success radius\">" + msg.pushState + "</span></td>\n" +
-                            "                <td class=\"td-manage\"><a style=\"text-decoration:none\" onClick=\"picture_stop(this,'10001')\"\n" +
-                            "                                         href=\"javascript:;\" title=\"下架\"><i class=\"Hui-iconfont\">&#xe6de;</i></a> <a\n" +
-                            "                        style=\"text-decoration:none\" class=\"ml-5\"\n" +
-                            "                        onClick=\"picture_edit('图库编辑','picture-add.html','10001')\" href=\"javascript:;\" title=\"编辑\"><i\n" +
-                            "                        class=\"Hui-iconfont\">&#xe6df;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\"\n" +
-                            "                                                                 onClick=\"picture_del(this,'10001')\" href=\"javascript:;\"\n" +
-                            "                                                                 title=\"删除\"><i class=\"Hui-iconfont\">&#xe6e2;</i></a>\n" +
-                            "                </td>" +
-                            "</tr>");
-                    })
+        $('#dataGrid').DataTable({
+            "processing": true,
+            "serverSide": true,
+            "ordering": false,
+            "oLanguage": {
+                "sLengthMenu": "每页显示 _MENU_ 条记录",
+                "sZeroRecords": "对不起，没有匹配的数据",
+                "sInfo": "第 _START_ - _END_ 条 / 共 _TOTAL_ 条数据",
+                "sInfoEmpty": "没有匹配的数据",
+                "sInfoFiltered": "(数据表中共 _MAX_ 条记录)",
+                "sProcessing": "正在加载中...",
+                "sSearch": "全文搜索：",
+                "oPaginate": {
+                    "sFirst": "第一页",
+                    "sPrevious": " 上一页 ",
+                    "sNext": " 下一页 ",
+                    "sLast": " 最后一页 "
                 }
-            }
-        })
+            },
+            "ajax": {
+                url: site + "/push/admin/list",
+                dataType: "json",
+                type: "post",
+//                contentType: "application/json",
+                headers: {"token": localStorage.getItem("token")}
+            },
+            "columns": [
+                {"data": "appName"},
+                {"data": "messageTitle"},
+                {"data": "messageContent"},
+                {"data": "pushState"},
+                {"data": "totalCnt"},
+                {
+                    "data": "sendSuccessCnt",
+                    "mRender": function (mData, type, full) {
+                        var html = [];
+                        html.push('<a href="javascript:openPushDetail(\'' + full.id + '\',1)">' + full.sendSuccessCnt + '</a>');
+                        return html.join('');
+                    }
+                },
+                {
+                    "data": "sendFailCnt",
+                    "mRender": function (mData, type, full) {
+                        var html = [];
+                        html.push('<a href="javascript:openPushDetail(\'' + full.id + '\',0)">' + full.sendFailCnt + '</a>');
+                        return html.join('');
+                    }
+                },
+                {"data": "createTime"}
+            ]
+        });
+//        $("#dataGrid").empty();
+//        $.ajax({
+//            url: site + "/push/admin/list",
+//            data: JSON.stringify({"appName": app}),
+//            dataType: "json",
+//            type: "post",
+//            contentType: "application/json",
+//            headers:{"token":localStorage.getItem("token")},
+//            success: function (cb) {
+//                if (cb && cb.code == "0000") {
+//                    var msgs = cb.data;
+//                    $.each(msgs, function (idx, msg) {
+//                        $("#dataGrid").append("<tr class=\"text-c\">" +
+//                            "<td><input name=\"\" type=\"checkbox\" value=\"\"></td>\n" +
+//                            "                <td>" + msg.id + "</td>\n" +
+//                            "                <td>生活</td>\n" +
+//                            "                <td class=\"text-c\">" + msg.platform + "</td>\n" +
+//                            "                <td class=\"text-c\">" + msg.messageTitle + "</td>\n" +
+//                            "                <td class=\"text-c\">" + msg.messageContent + "</a></td>\n" +
+//                            "                <td>" + msg.createTime + "</td>\n" +
+//                            "                <td class=\"td-status\"><span class=\"label label-success radius\">" + msg.pushState + "</span></td>\n" +
+//                            "                <td class=\"td-manage\"><a style=\"text-decoration:none\" onClick=\"picture_stop(this,'10001')\"\n" +
+//                            "                                         href=\"javascript:;\" title=\"下架\"><i class=\"Hui-iconfont\">&#xe6de;</i></a> <a\n" +
+//                            "                        style=\"text-decoration:none\" class=\"ml-5\"\n" +
+//                            "                        onClick=\"picture_edit('图库编辑','picture-add.html','10001')\" href=\"javascript:;\" title=\"编辑\"><i\n" +
+//                            "                        class=\"Hui-iconfont\">&#xe6df;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\"\n" +
+//                            "                                                                 onClick=\"picture_del(this,'10001')\" href=\"javascript:;\"\n" +
+//                            "                                                                 title=\"删除\"><i class=\"Hui-iconfont\">&#xe6e2;</i></a>\n" +
+//                            "                </td>" +
+//                            "</tr>");
+//                    })
+//                }
+//            }
+//        })
+    }
+    function openPushDetail(msgId, type) {
+        layer_close();
+        var index = layer.open({
+            type: 2,
+            title: "消息推送明细",
+            content: "message-detail.html?msgId=" + msgId + "&type=" + type
+        });
+        layer.full(index);
     }
     $("#searchMsg").bind("click", function () {
         loadGrid($("#appSelect").find("option:selected").text());
@@ -132,13 +207,13 @@
 </script>
 <script type="text/javascript">
     /*    $('.table-sort').dataTable({
-            "aaSorting": [[1, "desc"]],//默认第几个排序
-            "bStateSave": true,//状态保存
-            "aoColumnDefs": [
-                //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-                {"orderable": false, "aTargets": [0, 8]}// 制定列不参与排序
-            ]
-        });*/
+     "aaSorting": [[1, "desc"]],//默认第几个排序
+     "bStateSave": true,//状态保存
+     "aoColumnDefs": [
+     //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
+     {"orderable": false, "aTargets": [0, 8]}// 制定列不参与排序
+     ]
+     });*/
 
     /*消息-添加*/
     function picture_add(title, url) {
