--- a/webUI/message-list.html
+++ b/webUI/message-list.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css"/>
     <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin"/>
     <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css"/>
+    <style>
+        .dataTables_wrapper .dataTables_paginate .paginate_button {
+            height: 36px;
+        }
+    </style>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css"/>
     <!--[if IE 6]>
     <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js"></script>
@@ -37,8 +42,7 @@
         <button name="" id="searchMsg" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜消息
         </button>
     </div>-->
-    <div class="cl pd-5 bg-1 bk-gray mt-20"><span class="l"><a href="javascript:;" onclick="datadel()"
-                                                               class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a
+    <div class="cl pd-5 bg-1 bk-gray mt-20"><span class="l"><a
             class="btn btn-primary radius" onclick="picture_add('添加消息','message-add.html')" href="javascript:;"><i
             class="Hui-iconfont">&#xe600;</i> 发布消息</a></span></div>
     <div class="mt-20">
@@ -90,90 +94,78 @@
     var site = "http://127.0.0.1/pushAdmin";
     var loadGrid = function (app) {
         $('#dataGrid').DataTable({
-            "processing": true,
-            "serverSide": true,
-            "ordering": false,
-            "oLanguage": {
-                "sLengthMenu": "每页显示 _MENU_ 条记录",
-                "sZeroRecords": "对不起，没有匹配的数据",
-                "sInfo": "第 _START_ - _END_ 条 / 共 _TOTAL_ 条数据",
-                "sInfoEmpty": "没有匹配的数据",
-                "sInfoFiltered": "(数据表中共 _MAX_ 条记录)",
-                "sProcessing": "正在加载中...",
-                "sSearch": "全文搜索：",
-                "oPaginate": {
-                    "sFirst": "第一页",
-                    "sPrevious": " 上一页 ",
-                    "sNext": " 下一页 ",
-                    "sLast": " 最后一页 "
-                }
-            },
-            "ajax": {
-                url: site + "/push/admin/list",
-                dataType: "json",
-                type: "post",
+                "processing": true,
+                "serverSide": true,
+                "ordering": false,
+                "oLanguage": {
+                    "sLengthMenu": "每页显示 _MENU_ 条记录",
+                    "sZeroRecords": "对不起，没有匹配的数据",
+                    "sInfo": "第 _START_ - _END_ 条 / 共 _TOTAL_ 条数据",
+                    "sInfoEmpty": "没有匹配的数据",
+                    "sInfoFiltered": "(数据表中共 _MAX_ 条记录)",
+                    "sProcessing": "正在加载中...",
+                    "sSearch": "全文搜索：",
+                    "oPaginate": {
+                        "sFirst": "第一页",
+                        "sPrevious": "上一页",
+                        "sNext": "下一页",
+                        "sLast": "最后一页"
+                    }
+                },
+                "ajax": {
+                    url: site + "/push/admin/list",
+                    dataType: "json",
+                    type: "post",
 //                contentType: "application/json",
-                headers: {"token": localStorage.getItem("token")}
-            },
-            "columns": [
-                {"data": "appName"},
-                {"data": "messageTitle"},
-                {"data": "messageContent"},
-                {"data": "pushState"},
-                {"data": "totalCnt"},
-                {
-                    "data": "sendSuccessCnt",
-                    "mRender": function (mData, type, full) {
-                        var html = [];
-                        html.push('<a href="javascript:openPushDetail(\'' + full.id + '\',1)">' + full.sendSuccessCnt + '</a>');
-                        return html.join('');
-                    }
+                    headers: {"token": localStorage.getItem("token")}
                 },
-                {
-                    "data": "sendFailCnt",
-                    "mRender": function (mData, type, full) {
-                        var html = [];
-                        html.push('<a href="javascript:openPushDetail(\'' + full.id + '\',0)">' + full.sendFailCnt + '</a>');
-                        return html.join('');
-                    }
-                },
-                {"data": "createTime"}
-            ]
-        });
-//        $("#dataGrid").empty();
-//        $.ajax({
-//            url: site + "/push/admin/list",
-//            data: JSON.stringify({"appName": app}),
-//            dataType: "json",
-//            type: "post",
-//            contentType: "application/json",
-//            headers:{"token":localStorage.getItem("token")},
-//            success: function (cb) {
-//                if (cb && cb.code == "0000") {
-//                    var msgs = cb.data;
-//                    $.each(msgs, function (idx, msg) {
-//                        $("#dataGrid").append("<tr class=\"text-c\">" +
-//                            "<td><input name=\"\" type=\"checkbox\" value=\"\"></td>\n" +
-//                            "                <td>" + msg.id + "</td>\n" +
-//                            "                <td>生活</td>\n" +
-//                            "                <td class=\"text-c\">" + msg.platform + "</td>\n" +
-//                            "                <td class=\"text-c\">" + msg.messageTitle + "</td>\n" +
-//                            "                <td class=\"text-c\">" + msg.messageContent + "</a></td>\n" +
-//                            "                <td>" + msg.createTime + "</td>\n" +
-//                            "                <td class=\"td-status\"><span class=\"label label-success radius\">" + msg.pushState + "</span></td>\n" +
-//                            "                <td class=\"td-manage\"><a style=\"text-decoration:none\" onClick=\"picture_stop(this,'10001')\"\n" +
-//                            "                                         href=\"javascript:;\" title=\"下架\"><i class=\"Hui-iconfont\">&#xe6de;</i></a> <a\n" +
-//                            "                        style=\"text-decoration:none\" class=\"ml-5\"\n" +
-//                            "                        onClick=\"picture_edit('图库编辑','picture-add.html','10001')\" href=\"javascript:;\" title=\"编辑\"><i\n" +
-//                            "                        class=\"Hui-iconfont\">&#xe6df;</i></a> <a style=\"text-decoration:none\" class=\"ml-5\"\n" +
-//                            "                                                                 onClick=\"picture_del(this,'10001')\" href=\"javascript:;\"\n" +
-//                            "                                                                 title=\"删除\"><i class=\"Hui-iconfont\">&#xe6e2;</i></a>\n" +
-//                            "                </td>" +
-//                            "</tr>");
-//                    })
-//                }
-//            }
-//        })
+                "columns": [
+                    {"data": "appName"},
+                    {"data": "messageTitle"},
+                    {"data": "messageContent"},
+                    {
+                        "data": "pushState",
+                        "mRender": function (mData, type, full) {
+                            var html = [];
+                            if (full.pushState === 1) {
+                                html.push('推送成功');
+                            } else {
+                                html.push('推送失败');
+                            }
+                            return html.join('');
+                        }
+                    },
+                    {"data": "totalCnt"},
+                    {
+                        "data": "sendSuccessCnt",
+                        "mRender": function (mData, type, full) {
+                            var html = [];
+                            if (full.sendSuccessCnt > 0) {
+                                html.push('<a href="javascript:openPushDetail(\'' + full.id + '\',1)"><span style="color: #167427;">' + full.sendSuccessCnt + '</span></a>');
+                            } else {
+                                html.push('<a>0</a>');
+                            }
+                            return html.join('');
+                        }
+                    },
+                    {
+                        "data": "sendFailCnt",
+                        "mRender": function (mData, type, full) {
+                            var html = [];
+                            if (full.sendFailCnt > 0) {
+                                html.push('<a href="javascript:openPushDetail(\'' + full.id + '\',0)"><span style="color: #167427;">' + full.sendFailCnt + '</span></a>');
+
+                            } else {
+                                html.push('<a>0</a>');
+                            }
+                            return html.join('');
+                        }
+                    },
+                    {"data": "createTime"}
+                ]
+            }
+        )
+        ;
     }
     function openPushDetail(msgId, type) {
         layer_close();
