增强长连接自动恢复的稳定性

--- a/webUI/message-list.html
+++ b/webUI/message-list.html
@@ -212,7 +212,11 @@
         var index = layer.open({
             type: 2,
             title: title,
-            content: url
+            content: url,
+            end: function () {
+                debugger
+                location.reload();
+            }
         });
         layer.full(index);
     }
