增加大盘展示

--- a/webUI/main.html
+++ b/webUI/main.html
@@ -144,7 +144,7 @@
     <div id="iframe_box" class="Hui-article">
         <div class="show_iframe">
             <div style="display:none" class="loading"></div>
-            <iframe scrolling="yes" frameborder="0" src="welcome.html"></iframe>
+            <iframe scrolling="yes" frameborder="0" src="statics.html"></iframe>
         </div>
     </div>
 </section>
