--- a/webUI/welcome.html
+++ b/webUI/welcome.html
@@ -34,7 +34,8 @@
     <div class="cl pd-5 bg-1 bk-gray mt-20"><span class="l"><a href="javascript:;" onclick="datadel()"
                                                                class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a
             class="btn btn-primary radius" onclick="picture_add('添加APP','app-add.html')" href="javascript:;"><i
-            class="Hui-iconfont">&#xe600;</i> 添加APP</a></span> <span class="r">共有数据：<strong>54</strong> 条</span></div>
+            class="Hui-iconfont">&#xe600;</i> 添加APP</a></span> <span class="r">共有数据：<strong
+            id="appCnt"></strong> 条</span></div>
     <div class="mt-20">
         <table class="table table-border table-bordered table-bg table-hover table-sort">
             <thead>
@@ -81,6 +82,7 @@
                 if (cb && cb.code == "0000") {
                     var apps = cb.data;
                     localStorage.setItem("appList", JSON.stringify(apps));
+                    $("#appCnt").html(apps.length);
                     $.each(apps, function (idx, app) {
                         $("#dataGrid").append("<tr class=\"text-c\">" +
                             "<td><input name=\"\" type=\"checkbox\" value=\"\"></td>\n" +
@@ -118,20 +120,23 @@
 </script>
 <script type="text/javascript">
     /*    $('.table-sort').dataTable({
-            "aaSorting": [[1, "desc"]],//默认第几个排序
-            "bStateSave": true,//状态保存
-            "aoColumnDefs": [
-                //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-                {"orderable": false, "aTargets": [0, 8]}// 制定列不参与排序
-            ]
-        });*/
+     "aaSorting": [[1, "desc"]],//默认第几个排序
+     "bStateSave": true,//状态保存
+     "aoColumnDefs": [
+     //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
+     {"orderable": false, "aTargets": [0, 8]}// 制定列不参与排序
+     ]
+     });*/
 
     /*APP-添加*/
     function picture_add(title, url) {
         var index = layer.open({
             type: 2,
             title: title,
-            content: url
+            content: url,
+            end: function () {
+                location.reload();
+            }
         });
         layer.full(index);
     }
@@ -206,18 +211,13 @@
     /*APP-删除*/
     function picture_del(obj, id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.ajax({
-                type: 'POST',
-                url: '',
-                dataType: 'json',
-                success: function (data) {
-                    $(obj).parents("tr").remove();
-                    layer.msg('已删除!', {icon: 1, time: 1000});
-                },
-                error: function (data) {
-                    console.log(data.msg);
-                },
-            });
+            layer.msg('该功能还未实现!', {icon: 1, time: 1000});
+        });
+    }
+
+    function datadel() {
+        layer.confirm('确认要删除吗？', function (index) {
+            layer.msg('该功能还未实现!', {icon: 1, time: 1000});
         });
     }
 </script>
