适配webSocket协议，可以打开websocket-PUSH.html查看

--- a/webUI/message-add.html
+++ b/webUI/message-add.html
@@ -57,7 +57,7 @@
                 <select class="select input-text" name="platform">
                     <option value="1">安卓</option>
                     <option value="2">苹果</option>
-                    <option value="3">全部</option>
+                    <option value="3">web</option>
                 </select>
             </div>
         </div>
