适配webSocket协议，可以打开websocket-PUSH.html查看

--- a/webproxy/websocket-PUSH.html
+++ b/webproxy/websocket-PUSH.html
@@ -57,12 +57,11 @@
             ta.value = "Web Socket opened!";
             setTimeout(function () {
                 heartCheck.start();
-            }, 10000)
-
+            }, 30000)
         };
         socket.onclose = function (event) {
             var ta = document.getElementById('responseText');
-            ta.value = ta.value + "Web Socket closed";
+            ta.value = ta.value + '\n' + "Web Socket closed";
         };
     } else {
         alert("Your browser does not support Web Socket.");
